--- a/package.json
+++ b/package.json
@@ -1,18 +1,43 @@
 {
   "name": "react-components-viewer",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+  "private": false,
+  "main": "build/lib/components/index.js",
+  "types": "build/lib/components/index.d.ts",
+  "engines": {
+    "node": ">=8.0.0"
   },
-  "devDependencies": {
-    "react-scripts": "1.0.10"
+  "files": [
+    "build/lib"
+  ],
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-scripts-ts": "2.13.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start-js": "react-scripts-ts start",
+    "start": "npm-run-all -p watch-sass-to-css start-js",
+    "build-js": "react-scripts-ts build",
+    "build": "npm-run-all -p build-sass-to-css build-js",
+    "build-lib": "tsc && npm run build-sass-to-css && npm run copy-css-to-lib",
+    "test": "react-scripts-ts test --env=jsdom",
+    "eject": "react-scripts-ts eject",
+    "copy-css-to-lib": "npm-run-all -s copy-base-css copy-component-css",
+    "copy-base-css": "cpx \"./src/**/*.css\" ./build/lib/",
+    "copy-component-css": "cpx \"./src/components/**/*.css\" ./build/lib/components",
+    "build-sass-to-css": "node-sass-chokidar src/ -o src/",
+    "watch-sass-to-css": "node-sass-chokidar src/ -o src/ --watch --recursive"
+  },
+  "devDependencies": {
+    "@types/jest": "^22.1.0",
+    "@types/node": "^9.4.0",
+    "@types/react": "^16.0.35",
+    "@types/react-dom": "^16.0.3",
+    "cpx": "^1.5.0",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.2",
+    "typescript": "^2.6.2",
+    "webpack": "^3.10.0"
   }
 }
