--- a/package.json
+++ b/package.json
@@ -1,6 +1,17 @@
 {
   "name": "react-components-viewer",
   "version": "0.1.0",
+  "description": "components viewer for UI library development",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MykolaGolubyev/react-components-viewer.git"
+  },
+  "author": "mykolagolubyev",
+  "license": "Apache-2.0",
+  "bugs": {
+    "url": "https://github.com/MykolaGolubyev/react-components-viewer/issues"
+  },
+  "homepage": "https://github.com/MykolaGolubyev/react-components-viewer#readme",
   "private": false,
   "main": "build/lib/components/index.js",
   "types": "build/lib/components/index.d.ts",
