add table layout. tweak registry example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "declaration": true
   },
   "include": [
-    "src/components/**/*"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
