--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-components-viewer",
-  "version": "0.1.0",
+  "version": "0.2.4",
   "description": "components viewer for UI library development",
   "repository": {
     "type": "git",
@@ -23,8 +23,7 @@
   ],
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts-ts": "2.13.0"
+    "react-dom": "^16.2.0"
   },
   "scripts": {
     "start-js": "react-scripts-ts start",
@@ -49,6 +48,7 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "typescript": "^2.6.2",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "react-scripts-ts": "2.13.0"
   }
 }
