--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   ],
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "url-search-params-polyfill": "^3.0.0"
   },
   "scripts": {
     "start-js": "react-scripts-ts start",
@@ -47,6 +48,7 @@
     "cpx": "^1.5.0",
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
+    "jest": "^22.4.3",
     "typescript": "^2.6.2",
     "webpack": "^3.10.0",
     "react-scripts-ts": "2.13.0"
