--- a/package.json
+++ b/package.json
@@ -27,18 +27,12 @@
     "url-search-params-polyfill": "^3.0.0"
   },
   "scripts": {
-    "start-js": "react-scripts-ts start",
-    "start": "npm-run-all -p watch-sass-to-css start-js",
-    "build-js": "react-scripts-ts build",
-    "build": "npm-run-all -p build-sass-to-css build-js",
-    "build-lib": "tsc && npm run build-sass-to-css && npm run copy-css-to-lib",
+    "start": "react-scripts-ts start",
+    "build": "tsc && npm run copy-css-to-lib",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject",
     "copy-css-to-lib": "npm-run-all -s copy-base-css copy-component-css",
     "copy-base-css": "cpx \"./src/**/*.css\" ./build/lib/",
-    "copy-component-css": "cpx \"./src/components/**/*.css\" ./build/lib/components",
-    "build-sass-to-css": "node-sass-chokidar src/ -o src/",
-    "watch-sass-to-css": "node-sass-chokidar src/ -o src/ --watch --recursive"
+    "copy-component-css": "cpx \"./src/components/**/*.css\" ./build/lib/components"
   },
   "devDependencies": {
     "@types/jest": "^22.1.0",
@@ -46,7 +40,6 @@
     "@types/react": "^16.0.35",
     "@types/react-dom": "^16.0.3",
     "cpx": "^1.5.0",
-    "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "jest": "^22.4.3",
     "typescript": "^2.6.2",
