--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-components-viewer",
-  "version": "0.10.1",
+  "name": "react-component-viewer",
+  "version": "0.10.2",
   "description": "components viewer for UI library development",
   "repository": {
     "type": "git",
