--- a/documentation/rcv/package.json
+++ b/documentation/rcv/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "gatsby": "^2.0.76",
+    "marked": "^0.6.0",
+    "prismjs": "^1.15.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1"
   },
