doc-style-tweaks

--- a/documentation/rcv/package.json
+++ b/documentation/rcv/package.json
@@ -13,10 +13,12 @@
   },
   "dependencies": {
     "gatsby": "^2.0.76",
+    "gatsby-plugin-react-helmet": "^3.0.6",
     "marked": "^0.6.0",
     "prismjs": "^1.15.0",
     "react": "^16.5.1",
-    "react-dom": "^16.5.1"
+    "react-dom": "^16.5.1",
+    "react-helmet": "^5.2.0"
   },
   "repository": {
     "type": "git",
