--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build/lib"
   ],
   "dependencies": {
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "react": "16.8.5",
+    "react-dom": "16.8.5",
     "url-search-params-polyfill": "^5.1.0"
   },
   "scripts": {
@@ -36,9 +36,9 @@
   },
   "devDependencies": {
     "@types/jest": "^22.1.0",
-    "@types/node": "^9.4.0",
-    "@types/react": "^16.0.35",
-    "@types/react-dom": "^16.0.3",
+    "@types/node": "^11.13.0",
+    "@types/react": "^16.8.10",
+    "@types/react-dom": "^16.8.3",
     "cpx": "^1.5.0",
     "npm-run-all": "^4.1.2",
     "jest": "^22.4.3",
