--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "tsc && npm run copy-css-to-lib",
-    "test": "react-scripts-ts test --env=jsdom",
+    "test": "react-scripts-ts test --env=jsdom --watchAll",
     "copy-css-to-lib": "npm-run-all -s copy-base-css copy-component-css",
     "copy-base-css": "cpx \"./src/**/*.css\" ./build/lib/",
     "copy-component-css": "cpx \"./src/components/**/*.css\" ./build/lib/components"
@@ -39,11 +39,17 @@
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "cpx": "^1.5.0",
-    "jest": "^22.4.3",
-    "jest-cli": "^24.7.1",
+    "jest": "23.6.0",
+    "jest-cli": "23.6.0",
     "npm-run-all": "^4.1.2",
-    "react-scripts-ts": "2.13.0",
+    "react-scripts-ts": "^4.0.8",
     "typescript": "3.4.3",
-    "webpack": "^3.10.0"
-  }
+    "webpack": "4.19.1"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
