--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "build/lib"
   ],
   "dependencies": {
-    "react": "16.8.5",
-    "react-dom": "16.8.5"
+    "react": "16.13.1",
+    "react-dom": "16.13.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -39,12 +39,9 @@
     "@types/react": "^16.8.10",
     "@types/react-dom": "^16.8.3",
     "cpx": "^1.5.0",
-    "jest": "23.6.0",
-    "jest-cli": "23.6.0",
     "npm-run-all": "^4.1.2",
     "react-scripts-ts": "^4.0.8",
-    "typescript": "3.4.3",
-    "webpack": "4.19.1"
+    "typescript": "3.8"
   },
   "browserslist": [
     ">0.2%",
